[package]
name = "ziplog"
version = "0.1.0"
authors = ["Dan Aloni <dan@kernelim.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.6"
regex = "1.3.1"
structopt = "0.3.7"
itertools = "0.8.2"
grep-cli = "0.1.3"
termcolor = "1.0.5"

[profile.release]
lto = true
incremental = false
